[package]
name = "learning-proc-macro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
metadata-derive = { path = "metadata-derive" }
reflective-derive = { path = "reflective-derive" }

[workspace]
members = ["metadata-derive", "reflective-derive"]
